--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
             <button class="htg-ls" onclick="hitung()" type="button" value="submit">hitung</button>
             <button class="reset" type="reset" value="reset">clear</button><br>
             <input type="number" id="hasil" value=""><br>
-            <a href="./pages/keliling.html">Keliling segitiga</a>
+        </main>
+    </form>
+
+    <h1>Keliling Segitiga</h1>
+    <form action="">
+        <main class="container">
+            <label for="">Masukkan nilai sisi a :<label><br>
+            <input type="number" name="sisi1" id="sisi1" class="sisi1" placeholder="nilai a"><br>
+            <label for="">Masukkan nilai sisi b :<label><br>
+            <input type="number" name="sisi2" id="sisi2" class="sisi2" placeholder="nilai b"><br>
+            <label for="">Masukkan nilai sisi c :<label><br>
+            <input type="number" name="sisi3" id="sisi3" class="sisi3" placeholder="nilai c"><br>
+            <button class="htg-kl" onclick="keliling()" type="button" value="submit">hitung</button>
+            <button class="reset" type="reset" value="reset">clear</button><br>
+            <input type="number" id="hslKeliling" value=""><br>
         </main>
     </form>
 </body>
